# owl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release_build.yml  rust.yml  t.yml  t2.yml
analysis/: MARKERS.md
data/: GRCh38_owl_markers.bed.gz.tbi
docs/: score.md
scripts/: co-high.py  flatten.py  nocalls.py  repfilter.py  runner.snakemake
src/: lib.rs
